# FrozenEngine

./: CMakeLists.txt
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
source/: main.cpp
source/shaders/: fragment.glsl  vertex.glsl
